[iOS] Normalize iOS DeviceOrientation beta/gamma per spec. https://bugs.webkit.org/show_bug.cgi?id=137134 <radr://problem/9414459>

Patch by Rich Tibbett <rich.tibbett@gmail.com> on 2014-12-11
Reviewed by Benjamin Poulain.

Normalize DeviceOrientation beta and gamma on iOS to match the
conventions defined in the W3C DeviceOrientation Events specification.

beta values are returned in the range [-180, 180). gamma values are
returned in the range [-90, 90).

* platform/ios/WebCoreMotionManager.mm:


Canonical link: https://commits.webkit.org/157445@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@177198 268f45cc-cd09-0410-ab3c-d52691b4dbfc